[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/levels/DreamHub.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.0392157, 0.0588235, 0.270588, 1 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 15.0
bottom_radius = 2.0
height = 1.0
radial_segments = 8
rings = 1

[sub_resource type="CylinderShape" id=3]
radius = 15.0
height = 1.0

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.6, 3, 0.5 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.96479, 3.07767, 1.24825 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.6, 0, 0, 0.631373 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 2.5, 7, 2 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_color = Color( 0.411765, 0.6, 0, 0.631373 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 2.5, 7, 2 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.528618, 3.10754, 0.8339 )

[node name="DreamHub" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 3 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.0351, 0 )
light_energy = 0.8
spot_range = 40.1
spot_angle = 60.7234

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60144, 0 )

[node name="ForestGate" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.52486, 9.6248 )
width = 4.47218
height = 6.23909
depth = 1.40684

[node name="CSGBox" type="CSGBox" parent="ForestGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.692935, 0 )
operation = 2
width = 2.52135
height = 5.88166

[node name="Area" type="Area" parent="ForestGate"]

[node name="CollisionShape" type="CollisionShape" parent="ForestGate/Area"]
shape = SubResource( 4 )

[node name="BillboardBlocker" type="StaticBody" parent="ForestGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.537115 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="ForestGate/BillboardBlocker"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="ForestGate/BillboardBlocker"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="MuseumBlocker" type="StaticBody" parent="ForestGate"]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="ForestGate/MuseumBlocker"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="ForestGate/MuseumBlocker"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="RightPillarBody" type="StaticBody" parent="ForestGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.731, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="ForestGate/RightPillarBody"]
shape = SubResource( 8 )

[node name="LeftPillarBody" type="StaticBody" parent="ForestGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.731, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="ForestGate/LeftPillarBody"]
shape = SubResource( 8 )

[node name="BillboardGate" type="CSGBox" parent="."]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -8, 3.52486, 7.6248 )
width = 4.47218
height = 6.23909
depth = 1.40684

[node name="CSGBox" type="CSGBox" parent="BillboardGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.692935, 0 )
operation = 2
width = 2.52135
height = 5.88166

[node name="Area" type="Area" parent="BillboardGate"]

[node name="CollisionShape" type="CollisionShape" parent="BillboardGate/Area"]
shape = SubResource( 4 )

[node name="RightPillarBody" type="StaticBody" parent="BillboardGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.731, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="BillboardGate/RightPillarBody"]
shape = SubResource( 8 )

[node name="LeftPillarBody" type="StaticBody" parent="BillboardGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.731, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="BillboardGate/LeftPillarBody"]
shape = SubResource( 8 )

[node name="NoneuclidianGate" type="CSGBox" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 8, 3.52486, 7.6248 )
width = 4.47218
height = 6.23909
depth = 1.40684

[node name="CSGBox" type="CSGBox" parent="NoneuclidianGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.692935, 0 )
operation = 2
width = 2.52135
height = 5.88166

[node name="Area" type="Area" parent="NoneuclidianGate"]

[node name="CollisionShape" type="CollisionShape" parent="NoneuclidianGate/Area"]
shape = SubResource( 4 )

[node name="RightPillarBody" type="StaticBody" parent="NoneuclidianGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.731, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="NoneuclidianGate/RightPillarBody"]
shape = SubResource( 8 )

[node name="LeftPillarBody" type="StaticBody" parent="NoneuclidianGate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.731, 0, 0 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="NoneuclidianGate/LeftPillarBody"]
shape = SubResource( 8 )
